@@ -1,5 +1,5 @@
 name               : messagepack-rpc
-version            : 0.1.0.3
+version            : 0.2.0.0
 synopsis           : Message Pack RPC over TCP
 description        : Message Pack RPC over TCP
 homepage           : http://github.com/rodrigosetti/messagepack-rpc
@@ -26,8 +26,7 @@ library
                    , bytestring     == 0.10.*
                    , cereal         == 0.4.*
                    , containers     == 0.5.*
-                   , messagepack    >= 0.2.1
+                   , messagepack    == 0.4.*
                    , network-simple == 0.4.*
-                   , text           == 1.*
   default-language : Haskell2010
 
